Initial js attempts

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     </head>
 
     <body>
-        <h1>Hello, world!</h1>
+        <div class="container">
+            <h1>Welcome to GUESS THAT WORD!</h1>
+            <br><br>
+            <h2>Press letter any key to get started!</h2>
+            <br><br>
+            <div id="toBeGuessed"></div>
+            <div>Current Points: <span id="points"></span></div>
+            <div>Lives Remaining: <span id="lives"></span></div>
+            <div>Letters Already Tried: <span id="tried"></span></div>
+        </div>
     </body>
 </html>
