Fixed wording of h2 in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <h1>Welcome to GUESS THAT WORD!</h1>
             <br><br>
-            <h2>Press letter any key to get started!</h2>
+            <h2>Press any letter key to get started!</h2>
             <br><br>
             <div id="toBeGuessed"></div>
             <div>Current Points: <span id="points"></span></div>
