Fixed 'null' return issue in js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
-        <!-- JavaScript Tag with Relative Path to game.js -->
-        <script src="assets/javascript/game.js"></script>
-
         <!-- Title Tag -->
         <title>Guess The Word!</title>
 
@@ -24,9 +21,13 @@
             <h2>Press any letter key to get started!</h2>
             <br><br>
             <div id="toBeGuessed"></div>
-            <div>Current Points: <span id="points"></span></div>
-            <div>Lives Remaining: <span id="lives"></span></div>
-            <div>Letters Already Tried: <span id="tried"></span></div>
+            <div>Current Points: <span id="points">.</span></div>
+            <div>Lives Remaining: <span id="lives">.</span></div>
+            <div>Letters Already Tried: <span id="tried">.</span></div>
         </div>
+
+        <!-- JavaScript Tag with Relative Path to game.js -->
+        <script src="assets/javascript/game.js"></script>
+
     </body>
 </html>
